<resources>
    <string name="app_name">Yhanbl</string>

    <!-- Intro Strings-->
    <string name="intro_title">YOU HAVE A NEW BEAUTIFUL LETTER</string>
    <string name="intro_desc">Here is the service to receive, read and share some beautiful stories and letters with people around the world.</string>
    <string name="intro_button">Let\'s start</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="link_signup"><u>Let me sign up!</u></string>
    <string name="link_sign_in"><u>I already have an account!</u></string>
    <string name="link_forgot_password">I forgot my password...</string>
    <string name="action_signup_short">Sign up</string>
    <string name="description_image_1">your postal card picture</string>
    <string name="message_new_title_hint">Par quoi allez-vous commencer ?</string>
    <string name="message_new_text_hint">Quelle est la dernière chose que vous avez fait pour la première fois ? \n Quel est votre endroit préféré ?</string>
    <string name="action_send">Envoyer !</string>
</resources>
